--- a/Group Work/Homepage.html
+++ b/Group Work/Homepage.html
@@ -99,7 +99,7 @@
                 alt="Blog recipe pic 1" width="600" height="400">
             <div>
                 <p>Word to the wise: if it’s a green veggie, you can probably turn it into pesto. Read more</p>
-                <a class="recipe-link" href="">Read more</a>
+                <a class="recipe-link" href="https://www.thelazybroccoli.com/">Read more</a>
             </div>
         </div>
         <div class="right">
@@ -107,7 +107,7 @@
                 alt="Blog recipe pic 2" width="600" height="400">
             <div>
                 <p>Move over cauliflower crust, there’s a new gluten-free base in town. Read more</p>
-                <a class="recipe-link" href="">
+                <a class="recipe-link" href="https://www.thelazybroccoli.com/">
                     Read more</a>
             </div>
         </div>
