--- a/Group Work/About Us/About Us.html
+++ b/Group Work/About Us/About Us.html
@@ -19,7 +19,7 @@
     <div class="topbar-links">
         <a href="./About Us.html">About us</a>
         <a href="../Recipe/Recipes_html.html">Recipes</a>
-        <a href="CHANGE THIS">Blog</a>
+        <a href="../blogpage/blogpageindex.html">Blog</a>
     </div>
 </header>
 
