--- a/Group Work/Recipe/Recipes_html.html
+++ b/Group Work/Recipe/Recipes_html.html
@@ -17,7 +17,7 @@
         <div class="topbar-links">
             <a href="../About Us/About Us.html">About us</a>
             <a href="./Recipes_html.html">Recipes</a>
-            <a href="CHANGE THIS">Blog</a>
+            <a href="../blogpage/blogpageindex.html">Blog</a>
         </div>
     </header>
 
